--- a/translations/ar.json
+++ b/translations/ar.json
@@ -5,7 +5,7 @@
     "contactUs": "تواصل معنا",
     "services": "خدماتنا",
     "features": "ميزاتنا",
-    "admission": "التقديم",
+    "admission": "سجل الان",
     "buttons": {
       "language": "اللغة",
       "languages": {
@@ -19,7 +19,7 @@
       "title": "افتح عوالم جديدة لطفلك",
       "subtitle1": "مرحبا بكم في",
       "subtitle2": "حضانات الدانة",
-      "description": "في حضانة الدانا، نقدم بيئة تعليمية متكاملة ومخصصة تدعم نمو الأطفال وتطورهم في جميع مراحل حياتهم. نحن ملتزمون بتوفير أفضل بداية ممكنة لكل طفل من خلال رعاية متميزة وبرامج تعليمية مبتكرة.",
+      "description": "في حضانة الدانة، نقدم بيئة تعليمية متكاملة ومخصصة تدعم نمو الأطفال وتطورهم في جميع مراحل حياتهم. نحن ملتزمون بتوفير أفضل بداية ممكنة لكل طفل من خلال رعاية متميزة وبرامج تعليمية مبتكرة.",
       "button": "برامجنا",
       "banner": "افضل برامج للاطفال"
     },
@@ -73,7 +73,7 @@
     },
     "features": {
       "title": "ميزاتنا",
-      "button": "التقديم",
+      "button": "سجل الان",
       "cards": {
         "card1": {
           "title": "فريق مؤهل",
@@ -108,21 +108,21 @@
         "email": "البريد الإلكتروني",
         "phone": "رقم الهاتف",
         "address": "العنوان",
-        "submit": "تقديم الطلب",
-        "loading": "جاري التقديم...",
+        "submit": "سجل الان",
+        "loading": "جاري التسجيل...",
         "toast": {
-          "loading": "جاري التقديم...",
-          "success": "تم التقديم بنجاح",
+          "loading": "جاري التسجيل...",
+          "success": "تم التسجيل بنجاح",
           "failed": "حدث خطأ ما",
           "error": "لقد فشل التقديم، الرجاء المحاولة مرة أخرى في وقت لاحق",
-          "done": "تم التقديم بنجاح"
+          "done": "تم التسجيل بنجاح"
         }
       }
     }
   },
   "footer": {
     "title": "ابق علي تواصل معنا",
-    "address": "شارع الواسط - العزرة - ضاحية الرقة - الشارقة - الإمارات العربية المتحدة"
+    "address": "الإمارات العربية المتحدة"
   },
   "zod": {
     "email": "البريد الالكتروني غير صالح",
