--- a/translations/en.json
+++ b/translations/en.json
@@ -122,7 +122,7 @@
 
   "footer": {
     "title": "Stay Tuned With Us",
-    "address": "Gresik United East Java Nggepeng Village 6312"
+    "address": "United Arab Emirates"
   },
   "zod": {
     "email": "Invalid email",
