--- a/translations/ar.json
+++ b/translations/ar.json
@@ -103,11 +103,16 @@
         "phone": "رقم الهاتف"
       },
       "form": {
-        "name": "الأسم الكامل",
-        "age": "العمر",
+        "name": "الأسم",
+        "age": "اختر الفئة العمرية لطفلك",
         "email": "البريد الإلكتروني",
         "phone": "رقم الهاتف",
-        "address": "العنوان",
+        "date": "متى تريد أن تزورنا",
+        "question": "هل لديك أي استفسار؟ لا تتردد في السؤال",
+        "address": "اخترالفرع",
+        "defAge": "اختر الفئة العمرية",
+        "defBranch": "اختر الفرع",
+        "defDate": "اختر التاريخ",
         "submit": "سجل الان",
         "loading": "جاري التسجيل...",
         "toast": {
@@ -116,6 +121,25 @@
           "failed": "حدث خطأ ما",
           "error": "لقد فشل التقديم، الرجاء المحاولة مرة أخرى في وقت لاحق",
           "done": "تم التسجيل بنجاح"
+        },
+        "branches": {
+          "branch1": "ستانفورد خليفه أ",
+          "branch2": "ستانفورد زاخر",
+          "branch3": "ستانفورد محمد بين زايد",
+          "branch4": "حضانه ستانفورد ند الحمر",
+          "branch5": "حضانة ستانفورد خورفكان",
+          "branch6": "ستانفورد الصاروج",
+          "branch7": "ستانفورد الطويه",
+          "branch8": "Sستانفورد المشرف",
+          "branch9": "ستانفورد الشهامه",
+          "branch10": "ستانفورد شخبوط",
+          "branch11": "ستانفورد الشامخة"
+        },
+        "ages": {
+          "age1": "من 4 إلى 12 شهراً",
+          "age2": "من 1 إلى 2 سنة",
+          "age3": "من 2 إلى 3 سنة",
+          "age4": "من 3 إلى 4 سنة"
         }
       }
     }
