--- a/translations/ar.json
+++ b/translations/ar.json
@@ -130,7 +130,7 @@
           "branch5": "حضانة ستانفورد خورفكان",
           "branch6": "ستانفورد الصاروج",
           "branch7": "ستانفورد الطويه",
-          "branch8": "Sستانفورد المشرف",
+          "branch8": "ستانفورد المشرف",
           "branch9": "ستانفورد الشهامه",
           "branch10": "ستانفورد شخبوط",
           "branch11": "ستانفورد الشامخة"
