add calendar to form

--- a/translations/ar.json
+++ b/translations/ar.json
@@ -122,19 +122,7 @@
           "error": "لقد فشل التقديم، الرجاء المحاولة مرة أخرى في وقت لاحق",
           "done": "تم التسجيل بنجاح"
         },
-        "branches": {
-          "branch1": "ستانفورد خليفه أ",
-          "branch2": "ستانفورد زاخر",
-          "branch3": "ستانفورد محمد بين زايد",
-          "branch4": "حضانه ستانفورد ند الحمر",
-          "branch5": "حضانة ستانفورد خورفكان",
-          "branch6": "ستانفورد الصاروج",
-          "branch7": "ستانفورد الطويه",
-          "branch8": "ستانفورد المشرف",
-          "branch9": "ستانفورد الشهامه",
-          "branch10": "ستانفورد شخبوط",
-          "branch11": "ستانفورد الشامخة"
-        },
+
         "ages": {
           "age1": "من 4 إلى 12 شهراً",
           "age2": "من 1 إلى 2 سنة",
@@ -146,7 +134,8 @@
   },
   "footer": {
     "title": "ابق علي تواصل معنا",
-    "address": "الإمارات العربية المتحدة"
+    "address": "الإمارات العربية المتحدة",
+    "copyright": ". جميع الحقوق محفوظة"
   },
   "zod": {
     "email": "البريد الالكتروني غير صالح",
